# fuel_management

./: .gitignore  MANIFEST.in  README.md  doctypes.json  pyproject.toml  setup.py
fuel_management/: hooks.py  import_inventory.py  install.py  modules.txt
fuel_management/config/: desktop.py  docs.py
fuel_management/doctype/fleet_card/: fleet_card.json
fuel_management/doctype/fuel_management_settings/: fuel_management_settings.py
fuel_management/doctype/fuel_station/: fuel_station.json  fuel_station.py
fuel_management/doctype/fuel_tank/: fuel_tank.py
fuel_management/doctype/pump_group/: pump_group.json  pump_group.py
fuel_management/doctype/pump_nozzle/: pump_nozzle.json  pump_nozzle.py
fuel_management/fuel_management/: add_pump_group.py  bootstrap_shifts.py  create_kra_custom_field.py  create_shift_tables.py  create_workspace.py  export_doctypes.py  query_nozzles.py  scaffold_phase_3.py  scaffold_report.py  scaffold_spa.py
fuel_management/fuel_management/doctype/customer_payment/: customer_payment.js  customer_payment.json  customer_payment.py
fuel_management/fuel_management/doctype/dip stick reading/: dip stick reading.py
fuel_management/fuel_management/doctype/dip_stick_reading/: dip_stick_reading.json
fuel_management/fuel_management/doctype/fleet_card/: fleet_card.json  fleet_card.py
fuel_management/fuel_management/doctype/fleet_card_csa_drop/: fleet_card_csa_drop.json  fleet_card_csa_drop.py
fuel_management/import_data/: inventory_data.json
public/: build.json
public/css/: fuel_management.css
public/js/: fuel_management.js
(+89 files in other folders)
