[project]
name = "fuel_management"
authors = [
    { name = "USER", email = "user@example.com"}
]
description = "Fuel Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # keeping it commented as standard in frappe apps
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.set-version]
package = "fuel_management"
module = "fuel_management"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
